# clawsafety

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/reporter/: terminal.rs
cli/src/rules/: injection.rs  ioc.rs  mod.rs  permissions.rs  secrets.rs
cli/src/scanner/: file_walker.rs
docs/: ARCHITECTURE.md  PRD.md  ROADMAP.md  SCAN_RULES.md  competitive-analysis.md  competitive-strategy.md
server/: Cargo.toml
server/src/: badge.rs  handlers.rs  main.rs
server/src/github/: comment.rs  mod.rs  webhook.rs
site/: index.html  pnpm-lock.yaml
site/public/: ioc-feed.json  skill.md
site/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
site/src/app/arena/: page.tsx
site/src/app/blog/: page.tsx
site/src/app/blog/clawhavoc-amos/: page.tsx
site/src/app/blog/clawhavoc-bob-p2p/: page.tsx
site/src/app/dashboard/: page.tsx
site/src/app/demos/: page.tsx
site/src/app/docs/: page.tsx
site/src/app/en/: page.tsx
site/src/app/ioc/: page.tsx
site/src/app/pricing/: page.tsx
site/src/app/scan/: page.tsx
site/src/app/security/: page.tsx
site/src/app/skills/: page.tsx
site/src/components/: copy-command.tsx  scan-workbench.tsx  site-shell.tsx  skill-card.tsx
site/src/lib/: mock-scan.ts  registry.ts
skill/: SKILL.md
skill/references/: examples.md  known-patterns.md  report-format.md  scoring.md  threat-model.md
skill/scripts/: quick_scan.sh
src/: lib.rs
src/reporter/: json.rs  mod.rs
src/rules/: config.rs  dependencies.rs  mod.rs
src/scanner/: context.rs  mod.rs
src/scoring/: mod.rs
(+10 files in other folders)
