[package]
name = "clawsafety"
version = "0.1.0"
edition = "2021"
description = "Security scanner for Agent Skills"
license = "Apache-2.0"
repository = "https://github.com/yisec-ai/clawsafety"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
walkdir = "2"
anyhow = "1"
