[package]
name = "clawsafety"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Security scanner for Agent Skills - CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
walkdir = "2"
anyhow = "1"
