[package]
name = "clawsafety-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawSafety SaaS server - GitHub App integration"

[dependencies]
clawsafety = { path = "../cli" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"
base64 = "0.22"
tempfile = "3"
